Fix Java 17 compatibility and add missing modules to Dockerfiles
- Replace List.addFirst/removeLast (Java 21) with add(0)/remove(size-1)
- Add notify-audit-jpa, notify-queue-rabbitmq, notify-queue-kafka to both Dockerfiles

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>